# python-unit-testing-demo

./: .gitignore  pyproject.toml
src/: math.py  user.py  weather.py
tests/: math_add_pytest_test.py  math_add_test.py  math_divide_test.py  user_test.py  weather_mock1_test.py
